--- a/bac-template/products-a/product-1.html
+++ b/bac-template/products-a/product-1.html
@@ -43,15 +43,24 @@
               <li class="nav-item wow animate__fadeInLeft animate__fast">
                 <a class="nav-link pl-0" href="../"><i class="fa fa-home fa-fw"></i> <span class="">HOME</span></a>
               </li>
-              <li class="nav-item wow animate__fadeInLeft animate__fast animate__delay-1s">
-                <a class="nav-link pl-0 dropdown-toggle text-nowrap" href="#m1" data-parent="#navbar1"
-                  data-toggle="collapse" data-target="#m1" aria-expanded="false">
+              <li class="nav-item active wow animate__fadeInLeft animate__fast animate__delay-1s">
+                <a class="nav-link pl-0 dropdown-toggle" href="/categories.html">
                   <i class="fa fa-cart-plus fa-fw"></i> <span class="">PRODUCTOS</span>
                 </a>
-                <div class="collapse" id="m1">
-                  <ul class="flex-column nav">
-                    <a class="nav-link px-0 text-truncate" href="#">Sub</a>
-                    <a class="nav-link px-0 text-truncate" href="#">Sub longer</a>
+                <div class="collapse show" id="categories">
+                  <ul class="flex-column nav pl-3">
+                    <li class="blockquote-footer my-1 active">
+                      <a class="d-inline nav-link text-truncate" href="./products.html">Category A</a>
+                    </li>
+                    <li class="blockquote-footer my-1">
+                      <a class="d-inline nav-link text-truncate" href="./products.html">Category B</a>
+                    </li>
+                    <li class="blockquote-footer my-1">
+                      <a class="d-inline nav-link text-truncate" href="./products.html">Category C</a>
+                    </li>
+                    <li class="blockquote-footer my-1">
+                      <a class="d-inline nav-link text-truncate" href="./products.html">Category D</a>
+                    </li>
                   </ul>
                 </div>
               </li>
@@ -119,7 +128,7 @@
               <h5 class="btn btn-lg btn-block btn-success">Specs: D</h5>
               <h5 class="btn btn-lg btn-block btn-success">Specs: E</h5>
             </div>
-            <div class="col-lg-8 col-md-7 col-sm-12 wow animate__fadeInLeft px-5">
+            <div class="col-lg-8 col-md-7 col-sm-12 wow animate__fadeInLeft px-4">
               <h3 class="title">Producto A</h3>
               <h5>Description:</h5>
               <p>
@@ -129,8 +138,16 @@
               </p>
             </div>
           </div>
-          <div>
-
+          <div class="my-4">
+            <h5>Resumen:</h5>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque repudiandae distinctio inventore eligendi
+              quae repellendus, minima tenetur. Repudiandae distinctio ipsum sit iste, ipsam consequuntur nemo saepe
+              veniam maxime molestias maiores minima quibusdam corporis pariatur? Sequi vitae eum eveniet fugit minus
+              expedita ipsam perspiciatis, vero laborum quisquam aut numquam doloribus dignissimos voluptatibus?
+              Explicabo quasi autem porro itaque velit vero, illum odit quia, assumenda ullam aut nisi iusto voluptatum
+              facilis nam id tenetur maxime minima! Quos, odit possimus voluptas repellat quis ea!
+            </p>
           </div>
         </section>
         <footer class="bg-primary text-white border-success">
