--- a/bac-template/index.html
+++ b/bac-template/index.html
@@ -45,7 +45,7 @@
                                     <span class="">HOME</span></a>
                             </li>
                             <li class="nav-item wow animate__fadeInLeft animate__fast animate__delay-1s">
-                                <a class="nav-link pl-0 dropdown-toggle" href="/categories.html">
+                                <a class="nav-link pl-0 dropdown-toggle" href="./categories.html">
                                     <i class="fa fa-cart-plus fa-fw"></i>
                                     <span class="">PRODUCTOS</span>
                                 </a>
