cambio link altaClientes

--- a/LeaniM/panelclientes.html
+++ b/LeaniM/panelclientes.html
@@ -107,7 +107,7 @@
                   </a>
                 </li>
                 <li class="nav-item">
-                  <a href="altaClientes.html" class="nav-link">
+                  <a href="./altaClientes.html" class="nav-link">">
                     <i class="far fa-check-circle nav-icon"></i>
                     <p>Registro</p>
                   </a>
