--- a/LeaniM/altaclientes.html
+++ b/LeaniM/altaclientes.html
@@ -107,7 +107,7 @@
                   </a>
                 </li>
                 <li class="nav-item">
-                  <a href="altaClientes.html" class="nav-link active">
+                  <a href="./altaClientes.html" class="nav-link active">
                     <i class="far fa-check-circle nav-icon"></i>
                     <p>Registro</p>
                   </a>
