acomodos de css cambios de fuentes

--- a/Fenix/index.html
+++ b/Fenix/index.html
@@ -355,25 +355,61 @@
         </div>
       </div>
     </div>
-    <div class="row container mx-auto my-5">
+    <div class="row m-5">
       <div class="col">
-        <div class="card card-productos sombra">
-          <img src="https://via.placeholder.com/150/87BD32/FFFFFF?text=PRODS" class="img-fluid p-4" alt="">
+        <div class="card border-0 m-4">
+          <div class="card-productos sombra">
+            <img src="./img/productos/prod-1.png" class="img-fluid p-4" alt="producto 1">
+            <a href="#" class="btn btn-danger btn-lg font-weight-bolder btn-oferta">-30%</a>
+          </div>
+          <div hidden>
+            <h2>Producto</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing.</p>
+            <h2 class="font-weight-bolder text-right">$ 157,50</h2>
+            <a href="#" class="btn btn-block btn-primary">Agregar al Carrito</a>
+          </div>
         </div>
       </div>
       <div class="col">
-        <div class="card card-productos sombra">
-          <img src="https://via.placeholder.com/150/87BD32/FFFFFF?text=PRODS" class="img-fluid p-4" alt="">
+        <div class="card border-0 m-4">
+          <div class="card-productos sombra">
+            <img src="./img/productos/prod-1.png" class="img-fluid p-4" alt="producto 1">
+            <a href="#" class="btn btn-danger btn-lg font-weight-bolder btn-oferta">-30%</a>
+          </div>
+          <div hidden>
+            <h2>Producto</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing.</p>
+            <h2 class="font-weight-bolder text-right">$ 157,50</h2>
+            <a href="#" class="btn btn-block btn-primary">Agregar al Carrito</a>
+          </div>
         </div>
       </div>
       <div class="col">
-        <div class="card card-productos sombra">
-          <img src="https://via.placeholder.com/150/87BD32/FFFFFF?text=PRODS" class="img-fluid p-4" alt="">
+        <div class="card border-0 m-4">
+          <div class="card-productos sombra">
+            <img src="./img/productos/prod-1.png" class="img-fluid p-4" alt="producto 1">
+            <a href="#" class="btn btn-danger btn-lg font-weight-bolder btn-oferta">-30%</a>
+          </div>
+          <div hidden>
+            <h2>Producto</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing.</p>
+            <h2 class="font-weight-bolder text-right">$ 157,50</h2>
+            <a href="#" class="btn btn-block btn-primary">Agregar al Carrito</a>
+          </div>
         </div>
       </div>
       <div class="col">
-        <div class="card card-productos sombra">
-          <img src="https://via.placeholder.com/150/87BD32/FFFFFF?text=PRODS" class="img-fluid p-4" alt="">
+        <div class="card border-0 m-4">
+          <div class="card-productos sombra">
+            <img src="./img/productos/prod-1.png" class="img-fluid p-4" alt="producto 1">
+            <a href="#" class="btn btn-danger btn-lg font-weight-bolder btn-oferta">-30%</a>
+          </div>
+          <div hidden>
+            <h2>Producto</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing.</p>
+            <h2 class="font-weight-bolder text-right">$ 157,50</h2>
+            <a href="#" class="btn btn-block btn-primary">Agregar al Carrito</a>
+          </div>
         </div>
       </div>
     </div>
@@ -516,23 +552,23 @@
     <div class="row w-100 px-5">
       <img src="./img/linea.png" alt="" class="mb-5 mx-auto w-100 px-3">
       <div class="col-12 col-lg-6">
-        <h1 class="text-success">CONOCENOS</h1>
+        <h1 class="text-success mb-5">CONOCENOS</h1>
         <div class="px-3" style="border-left: solid 3px #000;">
           <h3 class="text-success"><i class="fas fa-square fa-xs"></i> Quiénes somos</h3>
-          <p class="font-weight-light">
-            El 4 de marzo de 1995 nace la cadena de Farmacias Nueva Social Fenix, con
+          <p class="font-weight-light text-justify my-2">
+            El <b>4 de marzo de 1995</b> nace la cadena de Farmacias Nueva Social Fenix, con
             la adquisición de la primera sucursal ubicada en la Av. José G. de Artigas 4702
             en el barrio de Villa Pueyrredón. Ya para ese entonces dicha farmacia llevaba
-            el nombre de Social Fenix y contaba con una clientela leal que depositaba en
-            ella la confianza en la dispensa de medicamentos. Esta a su vez ya era
+            el nombre de Social Fenix y contaba con una <b>clientela leal</b> que depositaba en
+            ella la <b>confianza en la dispensa de medicamentos.</b> Esta a su vez ya era
             reconocida en el barrio por aquellos Profesionales de la Salud quienes confiaban en el servicio que brindaba
             esta
             farmacia y la importante labor que la
             misma desarrollaba con sus pacientes.
           </p>
-          <p class="font-weight-light">
+          <p class="font-weight-light text-justify">
             Al pasar los meses la farmacia empezó a crecer y de ahí la necesidad de
-            expandirse a otros puntos estratégicos de Villa Pueyrredón y el 25 de Septiembre de 1996 se inaugura la
+            expandirse a otros puntos estratégicos de Villa Pueyrredón y el <b>25 de Septiembre de 1996</b> se inaugura la
             sucursal Nueva
             Social Fenix Griveo cita en la
             Av. José G. de Artigas 4901, para dar inicio a lo que hoy se conoce como la
@@ -540,11 +576,11 @@
           </p>
         </div>
       </div>
-      <div class="col-12 col-lg-6">
+      <div class="col-12 offset-1 col-lg-5">
         <img src="./img/fenix.png" class="mb-4" alt="">
-        <div class="px-3" style="border-left: solid 3px #000;">
+        <div class="px-3 my-4" style="border-left: solid 3px #000;">
           <h3 class="text-success"><i class="fas fa-square fa-xs"></i> Visión</h3>
-          <p class="font-weight-light">
+          <p class="font-weight-light text-justify">
             Ser identificados como la farmacia líder en Villa Pueyrredón, marcando la diferencia en la atención de
             nuestros clientes
             y asegurando
@@ -553,7 +589,7 @@
         </div>
         <div class="px-3" style="border-left: solid 3px #000;">
           <h3 class="text-success"><i class="fas fa-square fa-xs"></i> Misión</h3>
-          <p class="font-weight-light">
+          <p class="font-weight-light text-justify">
             Contribuir al bienestar de nuestros clientes dispensando productos
             farmacéuticos confiables, através de un amplio servicio que supere
             sus expectativas
@@ -565,7 +601,7 @@
   <!-- /conocenos -->
   <!-- contactanos -->
   <section id="contactanos" class="bg-secondary">
-    <div class="row pl-5">
+    <div class="row pl-5 pb-2">
       <div class="col-12 col-lg-6">
         <h3 class="text-light mb-4">CONTACTANOS</h3>
         <form action="" method="GET" id="form-contacto">
@@ -587,14 +623,15 @@
         </form>
       </div>
       <div class="col-12 col-lg-6">
-        <img src="./img/cartero.png" class="mt-n5 mr-n5" alt="">
+        <img src="./img/cartero.png" style="position: absolute; height: 100%; right: -2px; bottom: 0;" class="mr-n5 mb-n5" alt="">
       </div>
     </div>
   </section>
   <!-- /contactanos -->
   <!-- ubicacion -->
   <section id="ubicacion" class="px-0 pb-0">
-    <h3 class="text-success mx-5">UBICACIÓN</h3>
+    <h3 class="text-success container">UBICACIÓN</h3>
+    <div class="degradado"></div>
     <iframe
       src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2256.6033314567394!2d-58.498986502795695!3d-34.58312231736827!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb64f789f4935%3A0x1e2bd1256d25cc2a!2sNueva%20Social%20Fenix%20Mosconi!5e0!3m2!1ses-419!2sar!4v1595485717987!5m2!1ses-419!2sar"
       width="100%" height="700" frameborder="0" style="border:0; position: relative; z-index: 0;" allowfullscreen=""
