cambios de fuente, img wzp y otros

--- a/Fenix/index.html
+++ b/Fenix/index.html
@@ -33,9 +33,6 @@
         <li class="nav-item">
           <a class="nav-link px-1" href="#"><i class="fab fa-facebook-square text-success fa-2x"></i></a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link px-1" href="#"><i class="fab fa-whatsapp-square text-success fa-2x"></i></a>
-        </li>
       </ul>
       <ul class="navbar-nav w-100 nav-fill mt-lg-0 mb-4">
         <li class="nav-item">
@@ -66,9 +63,7 @@
     </div>
     <div class="px-3 pt-5 pb-4 m-0 mt-n5 bg-primary text-center sombra">
       <a href="#">
-        <span class="badge badge-danger ml-2" style="position: relative;">0</span>
-        <br>
-        <i class="fa fa-shopping-cart fa-3x text-light mt-0"></i>
+        <i class="fa fa-whatsapp fa-3x text-light mt-0"></i>
       </a>
     </div>
   </nav>
@@ -259,7 +254,7 @@
     </div>
     <div class="row w-100">
       <div class="col-12 col-lg-7 px-5 pt-0">
-        <p class="text-light font-weight-light" style="max-width: 600px;">
+        <p class="text-light font-weight-normal" style="max-width: 600px;">
           Ofrecemos un servicio de envío a domicilio a todo el
           barrio de Villa Pueyrredón y Villa Urquiza desde cualquiera
           de nuestras dos sucursales sin costo alguno. El horario de
@@ -293,9 +288,9 @@
         <h2 class="font-weight-bolder text-light">PROMOCIONES DEL MES</h2>
       </div>
     </div>
-    <div class="container">
+    <div class="px-5">
       <h4 class="font-weight-bolder">¡LOS MEJORES PRODUCTOS SOLO PARA VOS!</h4>
-      <h5><a href="#" class="text-primary">Ver todos los productos <i class="fa fa-long-arrow-alt-right pl-1"></i></a></h5>
+      <h5 hidden><a href="#" class="text-primary">Ver todos los productos <i class="fa fa-long-arrow-alt-right pl-1"></i></a></h5>
     </div>
     <div class="row m-5">
       <div class="col">
@@ -421,27 +416,27 @@
     <div class="row container mx-auto my-5">
       <div class="col">
         <div class="card sombra">
-          <img src="https://via.placeholder.com/150x70/87BD32/FFFFFF?text=MARCA" class="img-fluid p-2" alt="">
+          <img src="./img/marcas/marca-1.jpg" class="img-fluid img-marca p-3" alt="">
         </div>
       </div>
       <div class="col">
         <div class="card sombra">
-          <img src="https://via.placeholder.com/150x70/4B860A/FFFFFF?text=MARCA" class="img-fluid p-2" alt="">
+          <img src="./img/marcas/marca-2.jpg" class="img-fluid img-marca p-3" alt="">
         </div>
       </div>
       <div class="col">
         <div class="card sombra">
-          <img src="https://via.placeholder.com/150x70/000000/FFFFFF?text=MARCA" class="img-fluid p-2" alt="">
+          <img src="./img/marcas/marca-3.jpg" class="img-fluid img-marca p-3" alt="">
         </div>
       </div>
       <div class="col">
         <div class="card sombra">
-          <img src="https://via.placeholder.com/150x70/4B860A/FFFFFF?text=MARCA" class="img-fluid p-2" alt="">
+          <img src="./img/marcas/marca-4.jpg" class="img-fluid img-marca p-3" alt="">
         </div>
       </div>
       <div class="col">
         <div class="card sombra">
-          <img src="https://via.placeholder.com/150x70/87BD32/FFFFFF?text=MARCA" class="img-fluid p-2" alt="">
+          <img src="./img/marcas/marca-5.jpg" class="img-fluid img-marca p-3" alt="">
         </div>
       </div>
     </div>
@@ -454,7 +449,7 @@
         <h3 class="btn btn-gris btn-lg">COVID-19</h3>
         <h1>Tips para cuidarnos</h1>
         <p class="font-weight-bolder my-4">¡En Nueva Social Fénix nos cuidamos entre todos!</p>
-        <p class="font-weight-light" style="max-width: 550px;">El COVID-19 produce una enfermedad respiratoria que
+        <p class="font-weight-normal" style="max-width: 550px;">El COVID-19 produce una enfermedad respiratoria que
           solo en algunos casos puede complicarse (principalmente
           en personas mayores). Se transmite por vía respiratoria
           cuando el contacto es estrecho o por contacto con
@@ -469,37 +464,37 @@
         <div class="row justify-content-center text-center px-5">
           <div class="col-2">
             <img src="./img/covid/covid-1.png" alt="imagen covid" class="img-fluid img-covid">
-            <p class="font-weight-light px-4">Lavarse las manos con jabón regularmente.</p>
+            <p class="font-weight-normal px-4">Lavarse las manos con jabón regularmente.</p>
           </div>
           <div class="col-2">
             <img src="./img/covid/covid-2.png" alt="imagen covid" class="img-fluid img-covid">
-            <p class="font-weight-light px-4">Estornudar en el pliegue del codo.</p>
+            <p class="font-weight-normal px-4">Estornudar en el pliegue del codo.</p>
           </div>
           <div class="col-2">
             <img src="./img/covid/covid-3.png" alt="imagen covid" class="img-fluid img-covid">
-            <p class="font-weight-light px-4">No lavarse las manos a los ojos y la nariz.</p>
+            <p class="font-weight-normal px-4">No lavarse las manos a los ojos y la nariz.</p>
           </div>
           <div class="col-2">
             <img src="./img/covid/covid-4.png" alt="imagen covid" class="img-fluid img-covid">
-            <p class="font-weight-light px-4">Ventilar los ambientes.</p>
+            <p class="font-weight-normal px-4">Ventilar los ambientes.</p>
           </div>
           <div class="col-2">
             <img src="./img/covid/covid-5.png" alt="imagen covid" class="img-fluid img-covid">
-            <p class="font-weight-light px-4">Desinfectar los objetos que se usan con frecuencia.</p>
+            <p class="font-weight-normal px-4">Desinfectar los objetos que se usan con frecuencia.</p>
           </div>
         </div>
         <div class="row border-covid justify-content-center text-center mt-4">
           <div class="col-3">
             <img src="./img/covid/covid-6.png" alt="imagen covid" class="img-fluid img-covid2">
-            <p class="font-weight-light px-4">Fiebre y tos.</p>
+            <p class="font-weight-normal px-4">Fiebre y tos.</p>
           </div>
           <div class="col-3">
             <img src="./img/covid/covid-7.png" alt="imagen covid" class="img-fluid img-covid2">
-            <p class="font-weight-light px-4">Fiebre y dolor de garganta.</p>
+            <p class="font-weight-normal px-4">Fiebre y dolor de garganta.</p>
           </div>
           <div class="col-3">
             <img src="./img/covid/covid-8.png" alt="imagen covid" class="img-fluid img-covid2">
-            <p class="font-weight-light px-4">Fiebre y dificultad para respirar.</p>
+            <p class="font-weight-normal px-4">Fiebre y dificultad para respirar.</p>
           </div>
         </div>
       </div>
@@ -529,7 +524,7 @@
           <a href="#" class="sucursal">
             <img src="./img/suc.png" class="img-fluid p-4 sombra" alt="">
           </a>
-          <a href="#" class="text-light font-weight-light d-block mt-5">
+          <a href="#" class="text-light font-weight-normal d-block mt-5">
             <i class="fa fa-map-marker-alt fa-2x"> </i>
             <span class="h4 text-light pl-2"><u>Ver Mapa</u></span>
           </a>
@@ -538,7 +533,7 @@
           <a href="#" class="sucursal">
             <img src="./img/suc.png" class="img-fluid p-4 sombra" alt="">
           </a>
-          <a href="#" class="text-light font-weight-light d-block mt-5">
+          <a href="#" class="text-light font-weight-normal d-block mt-5">
             <i class="fa fa-map-marker-alt fa-2x"> </i>
             <span class="h4 text-light pl-2"><u>Ver Mapa</u></span>
           </a>
@@ -555,7 +550,7 @@
         <h1 class="text-success mb-5">CONOCENOS</h1>
         <div class="px-3" style="border-left: solid 3px #000;">
           <h3 class="text-success"><i class="fas fa-square fa-xs"></i> Quiénes somos</h3>
-          <p class="font-weight-light text-justify my-2">
+          <p class="font-weight-normal text-justify my-2">
             El <b>4 de marzo de 1995</b> nace la cadena de Farmacias Nueva Social Fenix, con
             la adquisición de la primera sucursal ubicada en la Av. José G. de Artigas 4702
             en el barrio de Villa Pueyrredón. Ya para ese entonces dicha farmacia llevaba
@@ -566,7 +561,7 @@
             farmacia y la importante labor que la
             misma desarrollaba con sus pacientes.
           </p>
-          <p class="font-weight-light text-justify">
+          <p class="font-weight-normal text-justify">
             Al pasar los meses la farmacia empezó a crecer y de ahí la necesidad de
             expandirse a otros puntos estratégicos de Villa Pueyrredón y el <b>25 de Septiembre de 1996</b> se inaugura la
             sucursal Nueva
@@ -580,7 +575,7 @@
         <img src="./img/fenix.png" class="mb-4" alt="">
         <div class="px-3 my-4" style="border-left: solid 3px #000;">
           <h3 class="text-success"><i class="fas fa-square fa-xs"></i> Visión</h3>
-          <p class="font-weight-light text-justify">
+          <p class="font-weight-normal text-justify">
             Ser identificados como la farmacia líder en Villa Pueyrredón, marcando la diferencia en la atención de
             nuestros clientes
             y asegurando
@@ -589,7 +584,7 @@
         </div>
         <div class="px-3" style="border-left: solid 3px #000;">
           <h3 class="text-success"><i class="fas fa-square fa-xs"></i> Misión</h3>
-          <p class="font-weight-light text-justify">
+          <p class="font-weight-normal text-justify">
             Contribuir al bienestar de nuestros clientes dispensando productos
             farmacéuticos confiables, através de un amplio servicio que supere
             sus expectativas
@@ -704,12 +699,12 @@
             <p class="text-light mb-0">
               SUCURSALES:
             </p>
-            <p class="text-light font-weight-light mb-0">
+            <p class="text-light font-weight-normal mb-0">
               <span class="font-weight-bold">Mosconi</span> / Gral. José Gervasio Artigas 4702
               <br>
               0800-666-1234
             </p>
-            <p class="text-light font-weight-light mb-0">
+            <p class="text-light font-weight-normal mb-0">
               <span class="font-weight-bold">Griveo</span> / Gral. José Gervasio Artigas 4901
               <br>
               0800-666-5678
@@ -721,12 +716,12 @@
         <a href="https://www.instagram.com/farmacianuevasocial/" target="_blank"><i
             class="fab fa-instagram-square text-light fa-2x"></i></a>
         <a href="#"><i class="fab fa-facebook-square text-light fa-2x"></i></a>
-        <p class="text-white font-weight-light d-inline-block pl-1" style="font-size: 13px; line-height: normal;">
+        <p class="text-white font-weight-normal d-inline-block pl-1" style="font-size: 13px; line-height: normal;">
           SEGUINOS EN
           <br>
           NUESTRAS REDES
         </p>
-        <p class="text-light font-weight-light">
+        <p class="text-light font-weight-normal">
           © Copyright 2019. Todos los derechos reservados | Profasan sociedad anonima, Cuit 30708995904. Dirección
           fiscal Artigas 4901, CABA
           <a href="#" class="float-right">
